// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pad('\\x1B[31mOK\\x1B[0m', 5, 'right') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[31mOK[0m
....................................................
5
....................................................
right
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[31mOK[0m
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('hello', 3, 'left') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
....................................................
3
....................................................
left
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hello
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('hi', 5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
....................................................
5
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('hi', 5, 'left') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
....................................................
5
....................................................
left
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('hi', 5, 'right') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
....................................................
5
....................................................
right
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('x', 5, 'right', '-') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
x
....................................................
5
....................................................
right
....................................................
-
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
x----
╚══════════════════════════════════════════════════╝"
`;

exports[`span('\\x1B[34mID\\x1B[0m', 6, 'left') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[34mID[0m
....................................................
6
....................................................
left
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[34mID[0m
╚══════════════════════════════════════════════════╝"
`;

exports[`span('hi', 5, 'left') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
....................................................
5
....................................................
left
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`span('hi', 5, 'right') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
....................................................
5
....................................................
right
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`span('x', 5, 'left', '.') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
x
....................................................
5
....................................................
left
....................................................
.
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
x....
╚══════════════════════════════════════════════════╝"
`;

exports[`take('\\x1B[31mhello\\x1B[0m world', 5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[31mhello[0m world
....................................................
5
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[31mhello
╚══════════════════════════════════════════════════╝"
`;

exports[`take('hello world', 5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello world
....................................................
5
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hello
╚══════════════════════════════════════════════════╝"
`;

exports[`take('hi', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
....................................................
10
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`take('👋 hello', 2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
👋 hello
....................................................
2
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
👋
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

....................................................
10
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: '',
  remaining: ''
}
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('\\x1B[32mone\\x1B[0m two three', 7) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[32mone[0m two three
....................................................
7
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: '\\x1B[32mone\\x1B[0m two',
  remaining: 'three'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('hello world here', 12) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello world here
....................................................
12
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: 'hello world',
  remaining: 'here'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('short', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
short
....................................................
10
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: 'short',
  remaining: ''
}
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('verylongword more', 8) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
verylongword more
....................................................
8
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: 'verylongword',
  remaining: 'more'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`width('') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`width('\\x1B[1m\\x1B[4mbold underline\\x1B[0m') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[1m[4mbold underline[0m
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
14
╚══════════════════════════════════════════════════╝"
`;

exports[`width('\\x1B[31m\\x1B[0m') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[31m[0m
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`width('\\x1B[31mred\\x1B[0m') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[31mred[0m
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`width('\\x1B[32mgreen\\x1B[0m text') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[32mgreen[0m text
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
10
╚══════════════════════════════════════════════════╝"
`;

exports[`width('abc') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
abc
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`width('hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
5
╚══════════════════════════════════════════════════╝"
`;

exports[`width('é') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
é
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`width('🇺🇸') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
🇺🇸
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`width('👋 \\x1B[32mhello\\x1B[0m') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
👋 [32mhello[0m
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
7
╚══════════════════════════════════════════════════╝"
`;

exports[`width('👋') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
👋
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`width('👨‍👩‍👧‍👦') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
👨‍👩‍👧‍👦
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > edge cases > wrap('xxxxx', 0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx
....................................................
0
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ '' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > edge cases > wrap('xxxxx', 0, { strategy: 'break-word' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx
....................................................
0
....................................................
{
  strategy: 'break-word'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ '' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > edge cases > wrap('xxxxx', 1, { strategy: 'break-word' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx
....................................................
1
....................................................
{
  strategy: 'break-word'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'x', 'x', 'x', 'x', 'x' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > edge cases > wrap('xxxxx', 1, { strategy: 'break-word-hyphen-in' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx
....................................................
1
....................................................
{
  strategy: 'break-word-hyphen-in'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ '' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > edge cases > wrap('xxxxx', 1, { strategy: 'break-word-hyphen-out' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx
....................................................
1
....................................................
{
  strategy: 'break-word-hyphen-out'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'x-', 'x-', 'x-', 'x-', 'x' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

....................................................
10
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('\\x1B[31mred text that spans\\x1B[0m multiple lines', 15) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[31mred text that spans[0m multiple lines
....................................................
15
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ '\\x1B[31mred text that', 'spans\\x1B[0m multiple', 'lines' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('\\x1B[32mhello world here\\x1B[0m', 12) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[32mhello world here[0m
....................................................
12
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ '\\x1B[32mhello world', 'here\\x1B[0m' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxx\\nxxx\\nxxxxx', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxx
xxx
xxxxx
....................................................
10
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxx', 'xxx', 'xxxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxx xxxxx xxxx', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx xxxxx xxxx
....................................................
10
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxx', 'xxxxx xxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxx xxxxx', 5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx xxxxx
....................................................
5
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxx', 'xxxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxx xxxxx', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx xxxxx
....................................................
10
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxx', 'xxxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxx', 20) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxx
....................................................
20
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxxxxxxxxx xxxx', 8) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxxxxxxxxx xxxx
....................................................
8
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxxxxxxxxx', 'xxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxxxxxxxxx xxxx', 8, { strategy: 'break-word' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxxxxxxxxx xxxx
....................................................
8
....................................................
{
  strategy: 'break-word'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxxxxx', 'xxxx', 'xxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxxxxxxxxx xxxx', 8, { strategy: 'break-word-hyphen-in' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxxxxxxxxx xxxx
....................................................
8
....................................................
{
  strategy: 'break-word-hyphen-in'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxxxx-', 'xxxxx', 'xxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxxxxxxxxx xxxx', 8, { strategy: 'break-word-hyphen-out' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxxxxxxxxx xxxx
....................................................
8
....................................................
{
  strategy: 'break-word-hyphen-out'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxxxxx-', 'xxxx', 'xxxx' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap > wrap('xxxxxxxxxxxx xxxx', 8, { strategy: 'word-overflow' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xxxxxxxxxxxx xxxx
....................................................
8
....................................................
{
  strategy: 'word-overflow'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'xxxxxxxxxxxx', 'xxxx' ]
╚══════════════════════════════════════════════════╝"
`;
